fix: contest dark mode

--- a/src/app/contest/[name]/page.module.css
+++ b/src/app/contest/[name]/page.module.css
@@ -55,7 +55,7 @@
 .article {
 	padding: 1.5rem 2rem;
 	border-radius: var(--border-radius);
-	background: white;
+	background: rgb(var(--card-rgb));
 	border: 1px solid rgba(var(--card-border-rgb), 0.15);
 }
 
@@ -175,7 +175,7 @@
 .contestInfo {
 	padding: 1rem 1.2rem;
 	border-radius: var(--border-radius);
-	background: white;
+	background: rgb(var(--card-rgb));
 	border: 1px solid rgba(var(--card-border-rgb), 0.15);
 }
 
