--- a/src/app/contest/page.module.css
+++ b/src/app/contest/page.module.css
@@ -37,7 +37,7 @@
 .contestCard {
 	padding: 1rem 1.2rem;
 	border-radius: var(--border-radius);
-	background: white;
+	background: rgb(var(--card-rgb));
 	border: 1px solid rgba(var(--card-border-rgb), 0.15);
 	transition: background 200ms, border 200ms;
 	text-decoration: none;
@@ -45,9 +45,8 @@
 }
 
 .contestCard:hover {
-	background: white;
+	background: rgba(var(--card-rgb), 0.8);
 	border: 1px solid rgba(var(--card-border-rgb), 0.5);
-	background-color: rgb(250, 250, 250);
 }
 
 .contestHeader {
