--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
+  --card-rgb: 255, 255, 255;
   --card-border-rgb: 131, 134, 135;
 }
 
@@ -47,7 +47,7 @@
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
+    --card-rgb: 40, 40, 40;
     --card-border-rgb: 200, 200, 200;
   }
 }
